--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.prompt
 
 # Dependency directories (remove the comment below to include it)
 vendor/
